<resources>
    <string name="app_name">Simple Click</string>
    <string name="textInput">Enter something</string>
    <string name="buttonDisplay">Display</string>
    <string name="textDisplay">Display what the user enters</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>